[package]
name = "anchorkit"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "anchorkit"
path = "src/main.rs"

[[example]]
name = "cli_example"
path = "examples/cli_example.rs"

[[example]]
name = "request_history_example"
path = "examples/request_history_example.rs"

[features]
default = ["std"]
# std: enables standard library support (networking, filesystem, threads).
#      Enabled by default for native builds. Must be disabled for WASM targets.
std = []
# wasm: targets wasm32-unknown-unknown for Soroban on-chain deployment.
#       Disables std, reqwest, and any host-only modules (main.rs CLI, examples).
#       Build with: cargo build --release --target wasm32-unknown-unknown --no-default-features --features wasm
wasm = []
mock-only = []
stress-tests = []

[dependencies]
soroban-sdk = "21.7.0"
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.7"
reqwest = { version = "0.12", features = ["blocking", "json"] }
aes-gcm = { version = "0.10.3", features = ["aes"] }
argon2 = { version = "0.5.3" }
rand = { version = "0.8", features = ["std"] }
base64 = { version = "0.22" }
rpassword = { version = "7.3" }

[build-dependencies]
serde_json = "1"
toml = "0.7"
jsonschema = "0.17"

[dev-dependencies]
soroban-sdk = { version = "21.7.0", features = ["testutils"] }
base64 = "0.22"
ed25519-dalek = "2"
rand = "0.8"
criterion = { version = "0.5", features = ["html_reports"] }
jsonschema = "0.17"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[[bench]]
name = "load_benchmarks"
harness = false
